--- a/39_RNN_LSTM_Sequence_Models.ipynb
+++ b/39_RNN_LSTM_Sequence_Models.ipynb
@@ -2,26 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/39_RNN_LSTM_Sequence_Models.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0cb8949b",
    "metadata": {},
    "source": [
-    "# 🔄 RNN & LSTM: Sieci z Pamięcią\n",
+    "# \ud83d\udd04 RNN & LSTM: Sieci z Pami\u0119ci\u0105\n",
     "\n",
-    "Standardowa sieć (Feed-Forward) przyjmuje wejście i wypluwa wyjście. Koniec.\n",
-    "Sieć Rekurencyjna (RNN) robi pętlę: **Wyjście z kroku 1 staje się dodatkowym wejściem dla kroku 2.**\n",
+    "Standardowa sie\u0107 (Feed-Forward) przyjmuje wej\u015bcie i wypluwa wyj\u015bcie. Koniec.\n",
+    "Sie\u0107 Rekurencyjna (RNN) robi p\u0119tl\u0119: **Wyj\u015bcie z kroku 1 staje si\u0119 dodatkowym wej\u015bciem dla kroku 2.**\n",
     "\n",
-    "Dzięki temu sieć \"pamięta\", co widziała chwilę temu.\n",
+    "Dzi\u0119ki temu sie\u0107 \"pami\u0119ta\", co widzia\u0142a chwil\u0119 temu.\n",
     "\n",
     "**Problem RNN:**\n",
-    "Zwykłe RNN mają \"krótką pamięć\" (problem znikającego gradientu). Pamiętają 5-10 kroków wstecz, ale zapominają początek długiej książki.\n",
+    "Zwyk\u0142e RNN maj\u0105 \"kr\u00f3tk\u0105 pami\u0119\u0107\" (problem znikaj\u0105cego gradientu). Pami\u0119taj\u0105 5-10 krok\u00f3w wstecz, ale zapominaj\u0105 pocz\u0105tek d\u0142ugiej ksi\u0105\u017cki.\n",
     "\n",
-    "**Rozwiązanie: LSTM (Long Short-Term Memory).**\n",
+    "**Rozwi\u0105zanie: LSTM (Long Short-Term Memory).**\n",
     "To neuron na sterydach. Posiada \"bramki\" (Gates):\n",
-    "1.  **Zapominania (Forget Gate):** Co wyrzucić z pamięci? (np. stary kontekst).\n",
-    "2.  **Wejścia (Input Gate):** Co zapisać nowego?\n",
-    "3.  **Wyjścia (Output Gate):** Co przekazać dalej?\n",
+    "1.  **Zapominania (Forget Gate):** Co wyrzuci\u0107 z pami\u0119ci? (np. stary kontekst).\n",
+    "2.  **Wej\u015bcia (Input Gate):** Co zapisa\u0107 nowego?\n",
+    "3.  **Wyj\u015bcia (Output Gate):** Co przekaza\u0107 dalej?\n",
     "\n",
-    "W tym notatniku nauczymy sieć przewidywać **Sinusoidę** (szereg czasowy)."
+    "W tym notatniku nauczymy sie\u0107 przewidywa\u0107 **Sinusoid\u0119** (szereg czasowy)."
    ]
   },
   {
@@ -44,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Liczba punktów: 1000\n"
+      "Liczba punkt\u00f3w: 1000\n"
      ]
     }
    ],
@@ -55,7 +62,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# 1. GENERUJEMY DANE (Sinusoida)\n",
-    "# Wyobraź sobie, że to kurs akcji albo temperatura.\n",
+    "# Wyobra\u017a sobie, \u017ce to kurs akcji albo temperatura.\n",
     "t = np.linspace(0, 100, 1000)\n",
     "data = np.sin(t)\n",
     "\n",
@@ -65,7 +72,7 @@
     "plt.title(\"Nasze dane: Sinusoida (Szereg czasowy)\")\n",
     "plt.show()\n",
     "\n",
-    "print(f\"Liczba punktów: {len(data)}\")"
+    "print(f\"Liczba punkt\u00f3w: {len(data)}\")"
    ]
   },
   {
@@ -75,13 +82,13 @@
    "source": [
     "## Przygotowanie Danych (Sliding Window)\n",
     "\n",
-    "Sieci LSTM wymagają specyficznego formatu danych. Nie wrzucamy całej fali naraz.\n",
-    "Tniemy ją na **okna (Windows)**.\n",
+    "Sieci LSTM wymagaj\u0105 specyficznego formatu danych. Nie wrzucamy ca\u0142ej fali naraz.\n",
+    "Tniemy j\u0105 na **okna (Windows)**.\n",
     "\n",
-    "*   **Input (X):** 50 poprzednich punktów.\n",
-    "*   **Target (y):** 1 następny punkt.\n",
+    "*   **Input (X):** 50 poprzednich punkt\u00f3w.\n",
+    "*   **Target (y):** 1 nast\u0119pny punkt.\n",
     "\n",
-    "Przykład:\n",
+    "Przyk\u0142ad:\n",
     "`[0, 1, 2 ... 49]` -> Przewiduj `50`\n",
     "`[1, 2, 3 ... 50]` -> Przewiduj `51`"
    ]
@@ -96,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kształt X_train: torch.Size([800, 50, 1]) -> (Próbki, Długość okna, Liczba cech)\n"
+      "Kszta\u0142t X_train: torch.Size([800, 50, 1]) -> (Pr\u00f3bki, D\u0142ugo\u015b\u0107 okna, Liczba cech)\n"
      ]
     }
    ],
@@ -108,9 +115,9 @@
     "    sequences = []\n",
     "    targets = []\n",
     "    for i in range(len(data) - window_size):\n",
-    "        # Bierzemy okno o długości 50\n",
+    "        # Bierzemy okno o d\u0142ugo\u015bci 50\n",
     "        seq = data[i : i + window_size]\n",
-    "        # Bierzemy następny punkt jako cel\n",
+    "        # Bierzemy nast\u0119pny punkt jako cel\n",
     "        label = data[i + window_size]\n",
     "        sequences.append(seq)\n",
     "        targets.append(label)\n",
@@ -119,17 +126,17 @@
     "X, y = create_sequences(data, window_size)\n",
     "\n",
     "# Konwersja na Tensory PyTorch\n",
-    "# WAŻNE: LSTM oczekuje kształtu (Batch_Size, Sequence_Length, Input_Size)\n",
-    "# My mamy jedną cechę (wartość sinusa), więc Input_Size = 1.\n",
+    "# WA\u017bNE: LSTM oczekuje kszta\u0142tu (Batch_Size, Sequence_Length, Input_Size)\n",
+    "# My mamy jedn\u0105 cech\u0119 (warto\u015b\u0107 sinusa), wi\u0119c Input_Size = 1.\n",
     "X = torch.tensor(X, dtype=torch.float32).unsqueeze(-1) # Dodajemy wymiar: [950, 50] -> [950, 50, 1]\n",
     "y = torch.tensor(y, dtype=torch.float32).unsqueeze(-1)\n",
     "\n",
-    "# Podział (Pierwsze 800 na trening, reszta na test)\n",
+    "# Podzia\u0142 (Pierwsze 800 na trening, reszta na test)\n",
     "train_size = 800\n",
     "X_train, X_test = X[:train_size], X[train_size:]\n",
     "y_train, y_test = y[:train_size], y[train_size:]\n",
     "\n",
-    "print(f\"Kształt X_train: {X_train.shape} -> (Próbki, Długość okna, Liczba cech)\")"
+    "print(f\"Kszta\u0142t X_train: {X_train.shape} -> (Pr\u00f3bki, D\u0142ugo\u015b\u0107 okna, Liczba cech)\")"
    ]
   },
   {
@@ -139,12 +146,12 @@
    "source": [
     "## Budowa Modelu LSTM\n",
     "\n",
-    "Użyjemy warstwy `nn.LSTM`.\n",
+    "U\u017cyjemy warstwy `nn.LSTM`.\n",
     "Zwraca ona dwie rzeczy:\n",
-    "1.  `out`: Wyniki dla każdego kroku czasowego.\n",
-    "2.  `hidden`: Stan ukryty (pamięć) po ostatnim kroku.\n",
+    "1.  `out`: Wyniki dla ka\u017cdego kroku czasowego.\n",
+    "2.  `hidden`: Stan ukryty (pami\u0119\u0107) po ostatnim kroku.\n",
     "\n",
-    "Nas interesuje tylko **ostatni wynik** z sekwencji (co będzie po 50 krokach?), więc bierzemy `out[:, -1, :]`."
+    "Nas interesuje tylko **ostatni wynik** z sekwencji (co b\u0119dzie po 50 krokach?), wi\u0119c bierzemy `out[:, -1, :]`."
    ]
   },
   {
@@ -170,12 +177,12 @@
     "        super().__init__()\n",
     "        \n",
     "        # WARSTWA 1: LSTM\n",
-    "        # hidden_size=50 oznacza, że \"pamięć\" ma pojemność 50 liczb.\n",
-    "        # batch_first=True oznacza, że dane wchodzą jako (Batch, Seq, Features)\n",
+    "        # hidden_size=50 oznacza, \u017ce \"pami\u0119\u0107\" ma pojemno\u015b\u0107 50 liczb.\n",
+    "        # batch_first=True oznacza, \u017ce dane wchodz\u0105 jako (Batch, Seq, Features)\n",
     "        self.lstm = nn.LSTM(input_size, hidden_size, batch_first=True)\n",
     "        \n",
-    "        # WARSTWA 2: Linear (Tłumacz)\n",
-    "        # Zamienia pamięć LSTM na jedną liczbę (przewidywaną wartość sinusa)\n",
+    "        # WARSTWA 2: Linear (T\u0142umacz)\n",
+    "        # Zamienia pami\u0119\u0107 LSTM na jedn\u0105 liczb\u0119 (przewidywan\u0105 warto\u015b\u0107 sinusa)\n",
     "        self.linear = nn.Linear(hidden_size, output_size)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -187,7 +194,7 @@
     "        # Bierzemy wynik tylko z OSTATNIEGO kroku czasowego (-1)\n",
     "        last_step = lstm_out[:, -1, :]\n",
     "        \n",
-    "        # Przepuszczamy przez warstwę liniową\n",
+    "        # Przepuszczamy przez warstw\u0119 liniow\u0105\n",
     "        prediction = self.linear(last_step)\n",
     "        \n",
     "        return prediction\n",
@@ -217,14 +224,14 @@
       "Epoka 70 | Loss: 0.00007\n",
       "Epoka 80 | Loss: 0.00003\n",
       "Epoka 90 | Loss: 0.00002\n",
-      "✅ Trening zakończony.\n"
+      "\u2705 Trening zako\u0144czony.\n"
      ]
     }
    ],
    "source": [
-    "# Trening (Standardowa pętla PyTorch)\n",
+    "# Trening (Standardowa p\u0119tla PyTorch)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
-    "loss_fn = nn.MSELoss() # Błąd średniokwadratowy (bo to regresja)\n",
+    "loss_fn = nn.MSELoss() # B\u0142\u0105d \u015bredniokwadratowy (bo to regresja)\n",
     "\n",
     "X_train, y_train = X_train.to(device), y_train.to(device)\n",
     "X_test, y_test = X_test.to(device), y_test.to(device)\n",
@@ -248,7 +255,7 @@
     "    if epoch % 10 == 0:\n",
     "        print(f\"Epoka {epoch} | Loss: {loss.item():.5f}\")\n",
     "\n",
-    "print(\"✅ Trening zakończony.\")"
+    "print(\"\u2705 Trening zako\u0144czony.\")"
    ]
   },
   {
@@ -256,12 +263,12 @@
    "id": "81e15acc",
    "metadata": {},
    "source": [
-    "## Test: Czy model przewiduje przyszłość?\n",
+    "## Test: Czy model przewiduje przysz\u0142o\u015b\u0107?\n",
     "\n",
-    "Zrobimy teraz coś trudnego: **Autoregresję**.\n",
-    "Zamiast dawać modelowi prawdziwe dane do przewidywania, każemy mu przewidywać na podstawie **własnych poprzednich przewidywań**.\n",
+    "Zrobimy teraz co\u015b trudnego: **Autoregresj\u0119**.\n",
+    "Zamiast dawa\u0107 modelowi prawdziwe dane do przewidywania, ka\u017cemy mu przewidywa\u0107 na podstawie **w\u0142asnych poprzednich przewidywa\u0144**.\n",
     "\n",
-    "To tak, jakbyś napisał jedno słowo książki, a potem pisał kolejne tylko na podstawie tego, co sam wymyśliłeś. Jeśli model jest słaby, wykres szybko się \"rozjedzie\"."
+    "To tak, jakby\u015b napisa\u0142 jedno s\u0142owo ksi\u0105\u017cki, a potem pisa\u0142 kolejne tylko na podstawie tego, co sam wymy\u015bli\u0142e\u015b. Je\u015bli model jest s\u0142aby, wykres szybko si\u0119 \"rozjedzie\"."
    ]
   },
   {
@@ -288,14 +295,14 @@
     "current_sequence = X_test[0].unsqueeze(0) # [1, 50, 1]\n",
     "predictions = []\n",
     "\n",
-    "# Przewidujemy 150 kroków w przyszłość (więcej niż mamy danych testowych!)\n",
+    "# Przewidujemy 150 krok\u00f3w w przysz\u0142o\u015b\u0107 (wi\u0119cej ni\u017c mamy danych testowych!)\n",
     "with torch.no_grad():\n",
     "    for _ in range(150):\n",
-    "        # Przewiduj następny punkt\n",
+    "        # Przewiduj nast\u0119pny punkt\n",
     "        pred = model(current_sequence)\n",
     "        predictions.append(pred.item())\n",
     "        \n",
-    "        # Aktualizuj okno: Wyrzuć najstarszy punkt, dodaj nowy (predykcję)\n",
+    "        # Aktualizuj okno: Wyrzu\u0107 najstarszy punkt, dodaj nowy (predykcj\u0119)\n",
     "        # To jest \"przesuwne okno\"\n",
     "        new_point = pred.unsqueeze(1) # [1, 1, 1]\n",
     "        current_sequence = torch.cat((current_sequence[:, 1:, :], new_point), dim=1)\n",
@@ -303,16 +310,16 @@
     "# Wizualizacja\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
-    "# Prawdziwe dane (cała sinusoida)\n",
+    "# Prawdziwe dane (ca\u0142a sinusoida)\n",
     "plt.plot(np.arange(len(data)), data, label='Prawdziwe dane', alpha=0.5)\n",
     "\n",
-    "# Nasze predykcje (zaczynają się tam, gdzie kończy trening)\n",
+    "# Nasze predykcje (zaczynaj\u0105 si\u0119 tam, gdzie ko\u0144czy trening)\n",
     "x_range_future = np.arange(train_size + window_size, train_size + window_size + 150)\n",
     "plt.plot(x_range_future, predictions, label='Predykcja LSTM (Autoregresja)', color='red', linewidth=2)\n",
     "\n",
     "plt.axvline(train_size + window_size, color='k', linestyle='--', label='Start Testu')\n",
     "plt.legend()\n",
-    "plt.title(\"LSTM generuje sinusoidę 'z głowy'\")\n",
+    "plt.title(\"LSTM generuje sinusoid\u0119 'z g\u0142owy'\")\n",
     "plt.xlim(700, 1000)\n",
     "plt.show()"
    ]
@@ -322,14 +329,14 @@
    "id": "11c36246",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Pamięć kosztuje\n",
+    "## \ud83e\udde0 Podsumowanie: Pami\u0119\u0107 kosztuje\n",
     "\n",
-    "Jeśli czerwona linia pokrywa się z niebieską (nawet po prawej stronie kreski startu), to znaczy, że **model zrozumiał cykliczność**. Nauczył się pojęcia \"fali\", a nie tylko zapamiętał punkty.\n",
+    "Je\u015bli czerwona linia pokrywa si\u0119 z niebiesk\u0105 (nawet po prawej stronie kreski startu), to znaczy, \u017ce **model zrozumia\u0142 cykliczno\u015b\u0107**. Nauczy\u0142 si\u0119 poj\u0119cia \"fali\", a nie tylko zapami\u0119ta\u0142 punkty.\n",
     "\n",
-    "**Tu jest haczyk (Sekwencyjność).**\n",
+    "**Tu jest haczyk (Sekwencyjno\u015b\u0107).**\n",
     "Trenowanie LSTM jest powolne. Dlaczego?\n",
-    "Bo nie da się tego zrównoleglić. Żeby policzyć krok 50, musisz znać wynik kroku 49. Musisz iść po kolei.\n",
-    "Właśnie dlatego wymyślono **Transformery** (Attention), które widzą całe zdanie naraz (równolegle). Ale do prostych szeregów czasowych (giełda, pogoda, sensory IOT) LSTM nadal jest królem."
+    "Bo nie da si\u0119 tego zr\u00f3wnolegli\u0107. \u017beby policzy\u0107 krok 50, musisz zna\u0107 wynik kroku 49. Musisz i\u015b\u0107 po kolei.\n",
+    "W\u0142a\u015bnie dlatego wymy\u015blono **Transformery** (Attention), kt\u00f3re widz\u0105 ca\u0142e zdanie naraz (r\u00f3wnolegle). Ale do prostych szereg\u00f3w czasowych (gie\u0142da, pogoda, sensory IOT) LSTM nadal jest kr\u00f3lem."
    ]
   }
  ],
